# MediaSDKForLTT

./: .config  .config.old  .gitignore  Kbuild  Kconfig  Makefile  construct.sh  env.sh  makelog.txt
applications/: Kbuild  Kconfig  Makefile
applications/common/: Makefile
applications/common/adasmng/: Makefile
applications/common/cmdmng/: Makefile
applications/common/cvinet/: Makefile
applications/common/devmng/: Makefile
applications/common/filemng/: Makefile
applications/common/gpsmng/: Makefile
applications/common/ispircut/: Makefile
applications/common/liveviewmng/: Makefile
applications/common/photomng/: Makefile
applications/common/playbackmng/: Makefile
applications/common/powercontrol/: Makefile
applications/common/recordmng/: Makefile
applications/common/speechmng/: Makefile
applications/common/storagemng/: Makefile
applications/common/system/: Makefile
applications/common/tempermng/: Makefile
applications/common/usb/: Makefile
applications/common/utils/: Makefile
applications/common/videomd/: Makefile
applications/common/volmng/: Makefile
applications/dashcam/: Makefile
applications/dashcam/modules/: Makefile
applications/tools/: Makefile
applications/tools/awtkres/: Makefile
applications/tools/bmp2bitmap/: Makefile  bmp2bitmap  bmp2bitmap.c
cmake/: compile_options.cmake
configs/: cv1800b_spinor_gc2053_defconfig  cv1800c_spinor_gc2053_defconfig  cv1801b_spinor_gc2053_defconfig  cv1801c_spinor_gc2053_defconfig  cv180zb_spinor_gc2053_defconfig  cv1810c_spinor_gc4653_defconfig  cv1811c_spinor_c4390_defconfig  cv1811h_emmc_gc4653_bt656_defconfig  cv1811h_multi_spinor_gc4653_bt656_defconfig  cv1811h_spinand_gc4653_bt656_defconfig  cv1811h_spinor_gc2053_bg0808_defconfig  cv1811h_spinor_gc2053_gc2053_bt656_defconfig  cv1811h_spinor_gc2053_gc2053_defconfig  cv1811h_spinor_gc4023_bt656_defconfig  cv1811h_spinor_gc4653_bt656_defconfig  cv1811ha_multi_spinor_gc2093_bt656_defconfig  cv1811ha_multi_spinor_gc4653_bt656_defconfig  cv1811ha_spinand_gc4653_bt656_defconfig  cv1811ha_spinor_gc2083_gc1084_defconfig  cv1812cp_spinand_gc4653_bt656_defconfig  cv1812ha_emmc_gc4653_bt656_defconfig  cv1812ha_spinor_gc4653_bt656_defconfig  litiantai_1811ha_gc2093_tp9963_defconfig
cpsl/: Makefile
cpsl/common.bak/: Makefile
cpsl/hal/: Kbuild  Kconfig  Makefile
cpsl/mmf/: Kbuild  Kconfig  Makefile  Makefile.param
cpsl/tpu/: Kbuild  Kconfig  Makefile
framework/: Makefile
framework/components/: .gitignore  Makefile
framework/components.bak/: Kbuild  Kconfig
framework/components/demuxer/: CMakeLists.txt  Makefile
framework/components/demuxer/include/cvi_demuxer/: cvi_demuxer.h
framework/components/demuxer/include/cvi_demuxer/utils/: check.hpp  codec.hpp  file.hpp
framework/components/demuxer/lib_arm/: libcvi_demuxer.so.1.0.4
framework/components/demuxer/lib_musl_riscv64/: libcvi_demuxer.so.1.0.4
framework/components/demuxer/src/: cvi_demuxer.cpp  ffmpeg_demuxer.cpp
framework/components/demuxer/test/: CMakeLists.txt  unit_test.cpp
framework/components/file_recover/: CMakeLists.txt  Makefile
framework/components/file_recover/include/cvi_file_recover/: cvi_file_recover.h
framework/components/file_recover/lib_arm/: libcvi_file_recover.so.1.0.8
framework/components/file_recover/lib_musl_riscv64/: libcvi_file_recover.so.1.0.8
framework/components/file_recover/src/: atom.cpp  atom.hpp  container.hpp  cvi_file_recover.cpp  file.hpp  file_recover.cpp  file_recover.hpp  mdat_atom_parser.cpp  mdat_atom_parser.hpp  mpeg4.cpp  mpeg4.hpp  packet.hpp  sps_parser.cpp  sps_parser.hpp  track.hpp
framework/components/file_recover/src/utils/: atom.hpp  binary.hpp  track.hpp
framework/components/file_recover/test/: CMakeLists.txt  unit_test.cpp
framework/components/player/: CMakeLists.txt  Makefile  README.md
framework/components/player/include/cvi_player/: cvi_player.h  types.hpp
framework/components/player/include/cvi_player/decoder/: subtitle_decoder.hpp  video_decoder.hpp
framework/components/player/include/cvi_player/frame/: frame.h
framework/components/player/include/cvi_player/packet/: flush_packet.hpp
framework/components/player/include/cvi_player/player/: seek_request.hpp  statistics_context.hpp  sync_context.hpp
framework/components/player/include/cvi_player/queue/: frame_queue.hpp  packet_queue.hpp
framework/components/player/include/cvi_player/stream/: audio_parameters.h  av_stream.hpp  video_stream.hpp
framework/components/player/include/cvi_player/utils/: frame.hpp
framework/components/player/lib_arm/: libcvi_player.so.1.0.7
framework/components/player/lib_musl_riscv64/: libcvi_player.so.1.0.7
framework/components/player/src/: cvi_player.cpp
framework/components/player/src/clock/: clock.cpp
framework/components/player/src/decoder/: audio_decoder.cpp  av_decoder.cpp  decoder.cpp  subtitle_decoder.cpp  video_decoder.cpp
framework/components/player/src/packet/: flush_packet.cpp
framework/components/player/src/player/: player.cpp  sync_context.cpp
framework/components/player/src/queue/: frame_queue.cpp  packet_queue.cpp
framework/components/player/src/stream/: audio_stream.cpp  av_stream.cpp  base_stream.cpp  subtitle_stream.cpp  video_stream.cpp
framework/components/player/src/utils/: frame.cpp
framework/components/player/test/: CMakeLists.txt  unit_test.cpp
framework/components/thumbnail_extractor/: CMakeLists.txt  Makefile
framework/components/thumbnail_extractor/lib_arm/: libcvi_thumbnail_extractor.so.1.0.2
framework/components/thumbnail_extractor/lib_musl_riscv64/: libcvi_thumbnail_extractor.so.1.0.2
framework/components/thumbnail_extractor/src/: cvi_thumbnail_extractor.cpp  thumbnail_extractor.cpp  thumbnail_extractor.hpp
framework/components/thumbnail_extractor/test/: CMakeLists.txt  test_main.cpp  unit_test.cpp
framework/mapi/: Makefile
framework/samples/: Makefile
framework/services/: Kbuild  Kconfig  Makefile
framework/services/player/test/: CMakeLists.txt  Makefile  README.md  unit_test.cpp
platform/: Kbuild  Kconfig
platform/alios/: Makefile
(+994 files in other folders)
